; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm64/coresight/extr_coresight-etm4x.c_etm_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm64/coresight/extr_coresight-etm4x.c_etm_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.etm_softc = type { i32 }

@CORESIGHT_LAR = common dso_local global i32 0, align 4
@CORESIGHT_UNLOCK = common dso_local global i32 0, align 4
@TRCOSLAR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"ETM Version: %d.%d\0A\00", align 1
@TRCIDR1_TRCARCHMAJ_M = common dso_local global i32 0, align 4
@TRCIDR1_TRCARCHMAJ_S = common dso_local global i32 0, align 4
@TRCIDR1_TRCARCHMIN_M = common dso_local global i32 0, align 4
@TRCIDR1_TRCARCHMIN_S = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @etm_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @etm_init(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.etm_softc*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call %struct.etm_softc* @device_get_softc(i32 %5)
  store %struct.etm_softc* %6, %struct.etm_softc** %3, align 8
  %7 = load %struct.etm_softc*, %struct.etm_softc** %3, align 8
  %8 = getelementptr inbounds %struct.etm_softc, %struct.etm_softc* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @CORESIGHT_LAR, align 4
  %11 = load i32, i32* @CORESIGHT_UNLOCK, align 4
  %12 = call i32 @bus_write_4(i32 %9, i32 %10, i32 %11)
  %13 = load %struct.etm_softc*, %struct.etm_softc** %3, align 8
  %14 = getelementptr inbounds %struct.etm_softc, %struct.etm_softc* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @TRCOSLAR, align 4
  %17 = call i32 @bus_write_4(i32 %15, i32 %16, i32 0)
  %18 = load %struct.etm_softc*, %struct.etm_softc** %3, align 8
  %19 = getelementptr inbounds %struct.etm_softc, %struct.etm_softc* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @TRCIDR(i32 1)
  %22 = call i32 @bus_read_4(i32 %20, i32 %21)
  store i32 %22, i32* %4, align 4
  %23 = load i32, i32* %4, align 4
  %24 = load i32, i32* @TRCIDR1_TRCARCHMAJ_M, align 4
  %25 = and i32 %23, %24
  %26 = load i32, i32* @TRCIDR1_TRCARCHMAJ_S, align 4
  %27 = ashr i32 %25, %26
  %28 = load i32, i32* %4, align 4
  %29 = load i32, i32* @TRCIDR1_TRCARCHMIN_M, align 4
  %30 = and i32 %28, %29
  %31 = load i32, i32* @TRCIDR1_TRCARCHMIN_S, align 4
  %32 = ashr i32 %30, %31
  %33 = call i32 @dprintf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %27, i32 %32)
  ret i32 0
}

declare dso_local %struct.etm_softc* @device_get_softc(i32) #1

declare dso_local i32 @bus_write_4(i32, i32, i32) #1

declare dso_local i32 @bus_read_4(i32, i32) #1

declare dso_local i32 @TRCIDR(i32) #1

declare dso_local i32 @dprintf(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
